--- a/theme/bb-dekunstkamer/css/main.less
+++ b/theme/bb-dekunstkamer/css/main.less
@@ -215,10 +215,20 @@ div.album-list {
 		display: block;
 		color: @blue;
 
+		margin: 1em 0;
+
 		text-shadow: 0px 0px 1px @blue;
 
 		&:hover {
 			color: @red;
+		}
+
+		&:first-child {
+			margin: 0 0 1em 0;
+		}
+
+		&:last-child {
+			margin: 1em 0 0 0;
 		}
 
 		figure {
