Changes text about prices

--- a/theme/bb-dekunstkamer/room.twig
+++ b/theme/bb-dekunstkamer/room.twig
@@ -20,7 +20,7 @@
                     <h4>{{ __("Prijzen") }}</h4>
                     {{ record.prices }}
                     <p class="small">
-                        {{ __("Prijzen zijn per nacht, inclusief ontbijt, toeristenbelasting en BTW.") }}
+                        {{ __("Prijzen zijn per nacht, inclusief ontbijt en BTW, exclusief toeristenbelasting.") }}
                     </p>
                 </div>
                 <div class="span6 bg-w txt-pad1">
